# Modul-UAP-ML

./: .gitignore  README.md  pyproject.toml
src/: app.py  utils.py
